--- a/resume.qmd
+++ b/resume.qmd
@@ -1,87 +1,73 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Sarah Egendoerfer's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Sarah Egendoerfer
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
+<a href="egen1310@gmail.com">egen1310@gmail.com</a>
 </div>
 
 
-## Currently
 
-Standing on the shoulders of giants
+## EDUCATION
 
-### Specialized in
-
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
-
-
-### Research interests
-
-Cooling, power series, optics, alchemy, planetary motions, apples.
-
-
-## Education
-
-`1654-1660`
-__The King's School, Grantham.__
-
-`June 1661 - now`
-__Trinity College, Cambridge__
-
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
+`April 2024 – now`
+__Business Analytics Major__
+_Brigham Young University - Idaho_
+● Minor in Spanish
+● 4.0 GPA
+● BYUI 4-Year Merit Scholarship 2024-2028
 
 
 
-## Awards
+## WORK EXPERIENCE
 
-`2012`
-President, *Royal Society*, London, UK
+`July 2024 – now`
+__IT Service Desk Analyst__
+_Brigham Young University - Idaho_
+● Provide technical support over phone and chats by listening actively to customer concerns, demonstrating understanding, and providing solutions in a calm, compassionate manner
+● Manage multiple tasks at once, answer calls (40 second wrap-up between calls), manage 4 chats simultaneously, and submit tickets for every interaction (created over 2000 detailed tickets in 8 months)
+● Managed difficult customer situations with patience, maintaining professionalism
+● High level of attention to detail when inputting information for caller records and service requests
+● Quickly learned new systems, tools, and processes (Microsoft Teams, Outlook, Word, Excel, different phone and chat systems, ticketing system, knowledge base)
 
-Associate, *French Academy of Science*, Paris, France
-
-
-
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
+`January 2022 – April 2024`
+__Freelance tutor__
+_Avon, IN_
+● Tutored in core subjects
+● Understood student’s perspective for best teaching approach
+● Helped student understand questions or problems and broke them into simple steps
+● Highly valued applying skills in a beneficial way
 
 
-## Occupation
 
-`1600`
-__Royal Mint__, London
+## VOLUNTEER EXPERIENCE
 
-- Warden
-- Minted coins
+`October 2022 – May 2023`
+__Humane Society Volunteer__
+_Fishers, IN_
+● Received and carried out instructions for various duties while acting as a friendly face for guests
 
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
+`Annual`
+__Special Olympics Volunteer__
+_Greenwood, IN_
+● Acted as an athlete buddy
+● Cheered on athletes, recorded their scores, and provided general assistance
 
+`June 2022`
+__Girls Camp Youth Leader__
+_Connersville, IN_
+● Leadership opportunity
+● Responsible for the girls’ physical and emotional well being
+
+## SKILLS
+
+● Customer assistance and technical support
+● Answering calls and managing chats in high volume
+● Creating/updating tickets
+● Collaboration in team environment
+● Open communication with shift lead, supervisors, and other teams
 
 
 <!-- ### Footer
